Create module declaration and fix modular build